--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,13 @@
     "concurrently": "^5.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "react-redux": "^7.2.0",
+    "react-social-login-buttons": "^3.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   }
