--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.9.16",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "react-redux": "^7.2.0",
     "react-social-login-buttons": "^3.1.0",
